- correct test for existence of auth config file.
- correct shutdown log message print.
- correct auth init test when no credentials required.
- correct auto.net installed as auto.smb.
- update LDAP auth - add autodectect option.
- correct test for libhesiod.
- correct directory cleanup in mount modules.
- merge key and wildcard LDAP query for lookups.

29/6/2006 autofs-5.0.0_beta6
----------------------------
- lookup_init cleanup and fix missed memory leak.
- use nis map order to check if update is needed.
- fix couple of memory leaks in lookup_yp.c.
- fix pasre error in replicated server module.
- correct spelling error in default config.
- fix default auth config not being installed.
- change LDAP query method as my test db was incorrect.
- change ldap defaults code to handle missing auth config.
- fix mistake in parsing old style LDAP specs.
- update LDAP so that new query methos also works for old
  syntax.
- allow global macro defines to override system macros.
- cleanup defaults_read_config.
- add rfc2307-bis example map configurations.
- change mode of of config file install to 644.
- update kernel patches.
- fix don't unbind on error return from get_query_dn.
- update RedHat autofs default config.

20/6/2006 autofs-5.0.0_beta5
---------------------------
- re-instate v4 directory cleanup.
- backout master map lookup changes made to beta3.
- change default master map from /etc/auto.master to auto.master
  so that we always use nsswitch to locate master map.
- change default installed master map to include "+auto.master"
  to pickup NIS master map.
- correct config names in default.c (jpro@bas.ac.uk).
- check base of offset mount tree is not a mount before umounting
  its offsets.
- fix replicated mount parse for case where last name in list
  fails lookup.
- correct indirect mount expire broken by the wildcard lookup fix.
- fix up multi-mount handling when wildcard map entry present.
- fix mutex not being unlocked on map read.